--- a/.eslintrc
+++ b/.eslintrc
@@ -45,6 +45,7 @@
       "vars": "local",
       "args": "after-used"
     }],
+    "no-const-assign": 2, // http://eslint.org/docs/rules/no-const-assign
     "no-use-before-define": [2, "nofunc"], // http://eslint.org/docs/rules/no-use-before-define
 
     /**
