--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,6 @@ machine:
     - docker
   pre:
     - meteor update || curl https://install.meteor.com | /bin/sh
-    - npm install velocity-cli -g
 
 dependencies:
   cache_directories:
@@ -22,7 +21,7 @@ dependencies:
 test:
   override:
     - cd $HOME/reaction
-    - velocity test-package getoutfitted:reaction-rental-products
+    - VELOCITY_TEST_PACKAGES=1 meteor test-packages --driver-package velocity:html-reporter package-to-test getoutfitted:reaction-rental-products
     - docker run -d -p :80:80 reactioncommerce/prequel; sleep 10
     - curl --retry 10 --retry-delay 5 -v http://localhost
 
