--- a/circle.yml
+++ b/circle.yml
@@ -1,26 +1,12 @@
 machine:
-  node:
-    version: 0.10.40
-  services:
-    - docker
   pre:
     - meteor update || curl https://install.meteor.com | /bin/sh
 
 dependencies:
   cache_directories:
     - "~/.meteor"
-
-  override:
-    - cd $HOME/reaction
-    - chmod +x bin/clone-packages.sh
-    - ./bin/clone-packages.sh
-    - git clone https://github.com/getoutfitted/reaction-rental-products packages/reaction-rental-products
-    - meteor update
-    - docker build -t reactioncommerce/prequel .
+    - "/usr/local/bin"
 
 test:
   override:
-    - cd $HOME/reaction
-    - VELOCITY_TEST_PACKAGES=1 meteor test-packages --driver-package velocity:html-reporter package-to-test getoutfitted:reaction-rental-products
-    - docker run -d -p :80:80 reactioncommerce/prequel; sleep 10
-    - curl --retry 10 --retry-delay 5 -v http://localhost
+    - VELOCITY_TEST_PACKAGES=1 meteor test-packages --driver-package velocity:html-reporter --velocity ./
