Adds methods for setting dates and rental lengths Green tests. Closes #20 Closes #35

--- a/.eslintrc
+++ b/.eslintrc
@@ -152,7 +152,7 @@
     }],
     "new-cap": [2, { // http://eslint.org/docs/rules/new-cap
       "newIsCap": true,
-      "capIsNewExceptions": ["Optional"],
+      "capIsNewExceptions": ["Optional", "Match", "OneOf"],
     }],
     "no-multiple-empty-lines": [2, { // http://eslint.org/docs/rules/no-multiple-empty-lines
       "max": 2
