--- a/.eslintrc
+++ b/.eslintrc
@@ -121,7 +121,6 @@
     }], // http://eslint.org/docs/rules/max-len
     "valid-jsdoc": 2, // http://eslint.org/docs/rules/valid-jsdoc
     "quote-props": [2, "consistent-as-needed"], // http://eslint.org/docs/rules/quote-props
-    "no-console": 2, // http://eslint.org/docs/rules/no-console
 
     /**
      * Style
@@ -171,14 +170,13 @@
       "before": false,
       "after": true
     }],
-    "space-after-keywords": 2, // http://eslint.org/docs/rules/space-after-keywords
+    "keyword-spacing": 2, // http://eslint.org/docs/rules/space-after-keywords
     "space-before-blocks": 2, // http://eslint.org/docs/rules/space-before-blocks
     "space-before-function-paren": [2, {
       "anonymous": "always",
       "named": "never"
     }], // http://eslint.org/docs/rules/space-before-function-paren
     "space-infix-ops": 2, // http://eslint.org/docs/rules/space-infix-ops
-    "space-return-throw-case": 2, // http://eslint.org/docs/rules/space-return-throw-case
     "space-in-parens": [2, "never"], // http://eslint.org/docs/rules/space-in-parens
     "spaced-comment": [2, "always"], // http://eslint.org/docs/rules/spaced-comment
   }
